--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,13 +51,6 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     
-    environment:
-      name: testpypi
-      url: https://test.pypi.org/p/elexon-bmrs
-    
-    permissions:
-      id-token: write  # Required for trusted publishing
-    
     steps:
     - name: Download distribution packages
       uses: actions/download-artifact@v4
@@ -66,10 +59,11 @@ jobs:
         path: dist/
     
     - name: Publish to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
-        skip-existing: true
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.TESTPYPI_API_TOKEN }}
+      run: |
+        twine upload --repository testpypi dist/*
 
   publish-to-pypi:
     name: Publish to PyPI
@@ -80,13 +74,6 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     
-    environment:
-      name: pypi
-      url: https://pypi.org/p/elexon-bmrs
-    
-    permissions:
-      id-token: write  # Required for trusted publishing
-    
     steps:
     - name: Download distribution packages
       uses: actions/download-artifact@v4
@@ -95,5 +82,9 @@ jobs:
         path: dist/
     
     - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+      run: |
+        twine upload dist/*
 
