fix: install twine in publish jobs
- Add 'pip install twine' step to both TestPyPI and PyPI publish jobs
- Fixes 'twine: command not found' error
- Required for uploading packages to PyPI

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,6 +58,9 @@ jobs:
         name: python-package-distributions
         path: dist/
     
+    - name: Install twine
+      run: pip install twine
+    
     - name: Publish to TestPyPI
       env:
         TWINE_USERNAME: __token__
@@ -80,6 +83,9 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
+    
+    - name: Install twine
+      run: pip install twine
     
     - name: Publish to PyPI
       env:
