fix: remove license field and clean build artifacts
- Remove license field from pyproject.toml to avoid metadata conflicts
- Add 'rm -rf dist/' to ensure clean builds
- License info is still in classifiers and LICENSE file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,9 @@ jobs:
         pip install build twine
     
     - name: Build distribution packages
-      run: python -m build
+      run: |
+        rm -rf dist/
+        python -m build
     
     - name: Check package integrity
       run: twine check dist/*
