--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 description = "Python client library for the Elexon BMRS (Balancing Mechanism Reporting Service) API"
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.8"
+license = {text = "MIT"}
 authors = [
     {name = "Benjamin Watts", email = "benjamin.watts@example.com"}
 ]
@@ -30,7 +31,6 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
