--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Python client library for the Elexon BMRS (Balancing Mechanism Reporting Service) API"
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "Benjamin Watts", email = "benjamin.watts@example.com"}
 ]
