--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,12 +25,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
     
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine setuptools>=77.0.0 wheel
+        pip install --upgrade build twine setuptools wheel
     
     - name: Build distribution packages
       run: |
